--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 /docs/cv_*.pdf
 /docs/cb_*.pdf
 /docs/job_*.pdf
+/docs/book_*.pdf
+/docs/esl*.pdf
+/docs/rs_*.pdf
+/docs/tex_*.pdf
+/docs/latex_*.pdf
